welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:1: error: not found: value Direction
	if (getDirection() == Direction.EAST)
                              ^